syntax = "proto3";

option go_package = "sample/grpc-server";

// The greeting service definition.
service repository {
  // CreateFile
  rpc CreateFile(CreateFileRequest) returns (CreateFileResponse) {}
  // ReadFile
  rpc ReadFile(ReadFileRequest) returns (ReadFileResponse) {}
  // UpdateFile
  rpc UpdateFile(UpdateFileRequest) returns (UpdateFileResponse) {}
  // DeleteFile
  rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse) {}

  // CreateTable
  rpc CreateTable(CreateTableRequest) returns (CreateTableResponse) {}
  // ReadTable
  rpc ReadTable(ReadTableRequest) returns (ReadTableResponse) {}
  // UpdateTable
  rpc UpdateTable(UpdateTableRequest) returns (UpdateTableResponse) {}
  // DeleteTable
  rpc DeleteTable(DeleteTableRequest) returns (DeleteTableResponse) {}

  // CreateCell
  rpc CreateCell(CreateCellRequest) returns (CreateCellResponse) {}
  // ReadCell
  rpc ReadCell(ReadCellRequest) returns (ReadCellResponse) {}
  // UpdateCell
  rpc UpdateCell(UpdateCellRequest) returns (UpdateCellResponse) {}
  // DeleteCell
  rpc DeleteCell(DeleteCellRequest) returns (DeleteCellResponse) {}
}

message File {
  uint64 id = 1;
  string filename = 2;
  repeated Table tables = 3;
}

message CreateFileRequest {
  File file = 1;
}

message CreateFileResponse {
  uint64 ID = 1;
}

message ReadFileRequest {
  uint64 ID = 1;
}

message ReadFileResponse {
  uint64 ID = 1;
  File file = 2;
}

message UpdateFileRequest {
  uint64 ID = 1;
  File file = 2;
}

message UpdateFileResponse {
  uint64 ID = 1;
}

message DeleteFileRequest {
  uint64 ID = 1;
}

message DeleteFileResponse {
  uint64 ID = 1;
}

message Table {
  uint64 id = 1;
  uint64 file_id = 2;
  string title = 3;
  repeated Cell cells = 4;
}

message CreateTableRequest {
  Table table = 1;
}

message CreateTableResponse {
  uint64 ID = 1;
}

message ReadTableRequest {
  uint64 ID = 1;
}

message ReadTableResponse {
  uint64 ID = 1;
  Table table = 2;
}

message UpdateTableRequest {
  uint64 ID = 1;
  Table table = 2;
}

message UpdateTableResponse {
  uint64 ID = 1;
}

message DeleteTableRequest {
  uint64 ID = 1;
}

message DeleteTableResponse {
  uint64 ID = 1;
}

message Cell {
  uint64 id = 1;
  uint64 row = 2;
  uint64 col = 3;
  string text = 4;
  uint64 table_id = 5;
}

message CreateCellRequest {
  Cell cell = 1;
}

message CreateCellResponse {
  uint64 ID = 1;
}

message ReadCellRequest {
  uint64 ID = 1;
}

message ReadCellResponse {
  Cell cell = 1;
}

message UpdateCellRequest {
  Cell cell = 1;
}

message UpdateCellResponse {
  uint64 ID = 1;
}

message DeleteCellRequest {
  uint64 ID = 1;
}

message DeleteCellResponse {
  uint64 ID = 1;
}
